[FEAT] reportResponse에 imageId 추가